--- a/nn_train/Dockerfile
+++ b/nn_train/Dockerfile
@@ -1,6 +1,12 @@
-FROM python:3.7
+FROM tensorflow/tensorflow:latest-py3
 
 RUN mkdir -p /home/nn_train
+
+RUN apt-get update && apt-get install -y \
+    python3-pip \
+    curl
+
+RUN pip3 install numpy matplotlib keras flask flask_api redis
 
 COPY . /home/nn_train/
 
