adding config and PV files

--- a/nn_predict/Dockerfile
+++ b/nn_predict/Dockerfile
@@ -4,10 +4,10 @@ RUN mkdir -p /home/nn_predict
 
 RUN apt-get update && apt-get install -y \
     python3-pip
-    
-
-RUN pip3 install numpy matplotlib keras flask flask-api 
+     
 
 COPY . /home/nn_predict/
+
+RUN pip3 install -r /home/nn_predict/requirements.txt
 
 CMD ["python3", "/home/nn_predict/nn_sq_predict_grpc.py"]
