--- a/nn_train/Dockerfile
+++ b/nn_train/Dockerfile
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:latest-py3
+FROM tensorflow/tensorflow:1.14.0-py3
 
 RUN mkdir -p /home/nn_train
 
@@ -6,8 +6,10 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     curl
 
-RUN pip3 install numpy matplotlib keras flask flask_api redis
-
 COPY . /home/nn_train/
+
+RUN pip3 install -r /home/nn_train/requirements.txt
+
+EXPOSE 5000
 
 CMD ["python", "/home/nn_train/nn_sq_train_grpc.py"]
