--- a/kube/nn-sq-train/nn_sq_train_svc.yaml
+++ b/kube/nn-sq-train/nn_sq_train_svc.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nn-sq-svc
-  namespace: nn-sq
 spec:
+  type: LoadBalancer
   selector:
-    app: nn-sq-selector-app 
+    app: nn-sq-train 
   ports:
   - name: redis-port
     protocol: TCP
@@ -13,5 +13,5 @@ spec:
     targetPort: 6379
   - name: flask-port
     protocol: TCP
-    port: 5000
+    port: 80
     targetPort: 5000
